Bug 219526 - A case for setting energy_performance_preference to balance_performance by default
Summary: A case for setting energy_performance_preference to balance_performance by de...
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Power Management
Classification: Unclassified
Component: Other (show other bugs)
Hardware: AMD Linux
: P3 high
Assignee: Mario Limonciello (AMD)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-24 20:36 UTC by Artem S. Tashkinov
Modified: 2024-12-07 04:30 UTC (History)
1 user (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Artem S. Tashkinov 2024-11-24 20:36:39 UTC
I would really love AMD to consider setting energy_performance_preference to balance_performance at least for laptops.

By default amd-pstate overshoots frequencies and makes power consumption significantly higher for simple tasks such as watching YouTube videos with HW acceleration turned on.

Here's a simple comparison:

Watching a VP9 1080p YouTube video in Firefox with HW acceleration turned on:

                  performance balance_performance
Watts                     14W                  7W
CPU frequency         5000MHz             3000MHz

In terms of sustained performance for tasks that require full CPU use, the difference is negligible.
Comment 1 Artem S. Tashkinov 2024-11-24 20:38:43 UTC
                  performance balance_performance
Watts                     14W                  7W
CPU frequency         5000MHz             3000MHz
Temps                     60C                 40C
Fan                      Loud      Barely audible
Comment 2 Mario Limonciello (AMD) 2024-11-24 22:51:40 UTC
Default policy is set by the firmware. It's overriden by userspace (power profiles daemon) based upon whether running on AC or battery.
Comment 3 Artem S. Tashkinov 2024-11-25 09:47:08 UTC
(In reply to Mario Limonciello (AMD) from comment #2)
> Default policy is set by the firmware. It's overriden by userspace (power
> profiles daemon) based upon whether running on AC or battery.

What stops you from overriding that?
Comment 4 Mario Limonciello (AMD) 2024-12-02 07:02:21 UTC
Technically?  Nothing.  It's a pretty trivial patch.

Let me discuss it internally with others at AMD to decide though.
Comment 5 Artem S. Tashkinov 2024-12-07 04:09:49 UTC
Thanks a ton for the patch!

Will be fixed in 6.13.
Comment 6 Mario Limonciello (AMD) 2024-12-07 04:30:24 UTC
Sure. But to clarify this will be 6.14 not 6.13.

Note You need to log in before you can comment on or make changes to this bug.