cpufreq/amd-pstate: Set different default EPP policy for Epyc and Ryzen

commit f9a378ff6443cdcd4387e5dbb76fa5fa549a83ec upstream.

For Ryzen systems the EPP policy set by the BIOS is generally configured
to performance as this is the default register value for the CPPC request
MSR.

If a user doesn't use additional software to configure EPP then the system
will default biased towards performance and consume extra battery. Instead
configure the default to "balanced_performance" for this case.

Suggested-by: Artem S. Tashkinov <aros@gmx.com>
Reviewed-by: Dhananjay Ugwekar <dhananjay.ugwekar@amd.com>
Tested-by: Dhananjay Ugwekar <dhananjay.ugwekar@amd.com>
Closes: https://bugzilla.kernel.org/show_bug.cgi?id=219526
Reviewed-by: Gautham R. Shenoy <gautham.shenoy@amd.com>
Link: https://lore.kernel.org/r/20241209185248.16301-15-mario.limonciello@amd.com
Signed-off-by: Mario Limonciello <mario.limonciello@amd.com>
Signed-off-by: Arukonda Rahul <arukonda.rahul@amd.com>
Signed-off-by: mohanasv2 <mohanasv@amd.com>
Signed-off-by: Chuyi Zhou <zhouchuyi@bytedance.com>